tests/snapshots/test_runner__tests__compiler__typecheck__record_wildcard_4__record_wildcard_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type People = {
  firstName: String,
  lastName: String
}

let (x: String) .s (lastName: String): People =
  {..}
// ^^ Error: missing property firstName

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_wildcard_4/record_wildcard_4.kk:7:4
  │
7 │   {..}
  │    ^^ Unknown variable `firstName`
  │
  = Cannot find this value symbol in the current scope
